--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,3 +1,25 @@
+$accent: #6CA8EE;
+$gray: #E9E6E1;
+$transition: .3s;
+
+body {
+    background: linear-gradient(0deg, #F1EEE8 0%, #F1EEE8 100%), #FFF;
+    font-family: 'Mont';
+    position: relative;
+    width: 100vw;
+    overflow: hidden;
+}
+
+a {
+    display: inline-block;
+    color: inherit;
+    text-decoration: none;
+
+    &:focus {
+        outline: none;
+    }
+}
+
 .container {
     max-width: 1644px;
     margin: 0 auto;
